# xfmido

./: .gitignore  README.ja.md  README.md  pyproject.toml
.github/scripts/: update_version.sh
.github/workflows/: publish-to-pypi.yaml  publish-to-testpypi.yaml  python-app.yaml  python-check.yaml  python-lint.yaml  python-test.yaml  sample.yaml  update-version.yaml
sample/: sample.mid
src/xfmido/: __init__.py  xfmido.py
tests/: test_xfmido.py
