[project]
name = "xfmido"
version = "0.0.0"
description = "A modified version of the Mido library to handle XF format MIDI files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
]
authors = [
    { name="shimajiroxyz" },
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
]
