[project]
name = "xfmido"
version = "0.0.0"
description = "A modified version of the Mido library to handle XF format MIDI files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido~=1.3",
]
authors = [
    { name="shimajiroxyz" },
]
keywords = ["midi", "xfmido", "music"]
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
    "taskipy>=1.13.0",
]

[tool.taskipy.tasks]
test = "pytest"
lint = "uvx ruff check ."
format = "uvx ruff format ."


